--- a/package.json
+++ b/package.json
@@ -7,10 +7,18 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sequelize": "^5.18.4"
   },
   "devDependencies": {
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
     "nodemon": "^1.19.2",
+    "prettier": "^1.18.2",
+    "sequelize-cli": "^5.5.1",
     "sucrase": "^3.10.1"
   }
 }
